# sc_demo

./: README.md
.github/workflow/: develop.yml
.github/workflows/: main.yml
back/: .htaccess  app.py  detection.py  embedding.py  main.py  pyproject.toml  requirements.txt
back/sc_demo_back/: requirements.txt
front/: package-lock.json  package.json
front/src/: App.tsx
sc-demo-back/: pyproject.toml
sc-demo-back/sc_demo_back/: main.py
sc-demo-front/src/: App.tsx
